[package]
name = "suds"
version = "0.1.0"
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
test-case = "1.0"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
crossterm = "0.16"
fehler = "1.0.0-alpha.2"
lazy_static = "1.4"
strum = "0.17"
strum_macros = "0.17"
